[gd_scene load_steps=5 format=3 uid="uid://b7uigk2ronqgh"]

[ext_resource type="Script" path="res://player/player.gd" id="1_hoi2d"]
[ext_resource type="Texture2D" uid="uid://csfhcknrdxk1f" path="res://sprite_sheet-export.png" id="2_1bccl"]
[ext_resource type="AudioStream" uid="uid://b5duk7a2awxbh" path="res://audio/game-over-arcade-6435.mp3" id="3_gw6mx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7bcss"]
size = Vector2(48, 48)

[node name="player" type="Area2D" groups=["moving_entity", "player"]]
z_index = 1
collision_layer = 4
collision_mask = 10
script = ExtResource("1_hoi2d")

[node name="forward_cast" type="RayCast2D" parent="."]
target_position = Vector2(128, 0)
collision_mask = 11
collide_with_areas = true
collide_with_bodies = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7bcss")

[node name="player_sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_1bccl")
vframes = 2
region_enabled = true
region_rect = Rect2(128, 0, 128, 256)

[node name="player_sprite_dead" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_1bccl")
region_enabled = true
region_rect = Rect2(128, 256, 128, 128)

[node name="death_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_gw6mx")
pitch_scale = 1.58

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
